Completed: Task 2, AddTwoNumbers

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -8,10 +8,10 @@
  
  10 April: 1
  11 April: 7
- 
+ 12 April: 2
  
  Done by myself:
-    1, 7
+    1, 7, 2
  
  Done by myself but need attention:
 
