--- a/Statistics.strings
+++ b/Statistics.strings
@@ -9,9 +9,10 @@
  10 April: 1
  11 April: 7
  12 April: 2
+ 13 April: 9
  
  Done by myself:
-    1, 7, 2
+    1, 7, 2, 9
  
  Done by myself but need attention:
 
