--- a/Statistics.strings
+++ b/Statistics.strings
@@ -12,8 +12,8 @@
  13 April: 9
  
  Done by myself:
-    1, 7, 2, 9
+    1, 7, 2, 9, 13
  
  Done by myself but need attention:
-
+    WeeklyContests_80.task_1
 */
