--- a/Statistics.strings
+++ b/Statistics.strings
@@ -10,10 +10,12 @@
  11 April: 7
  12 April: 2
  13 April: 9
+ 17 April: 13, WeeklyContests_80.task_1
+ 19 April: 14
  
  Done by myself:
     1, 7, 2, 9, 13
  
  Done by myself but need attention:
-    WeeklyContests_80.task_1
+    14, WeeklyContests_80.task_1
 */
