Statistics were updated

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -12,6 +12,7 @@
  13 April: 9
  17 April: 13, WeeklyContests_80.task_1
  19 April: 14
+ 6  May:   HashMap & HashSet
  
  Done by myself:
     1, 7, 2, 9, 13
