Search Fibonacci number & Is Fibonacci number were solved

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -13,6 +13,8 @@
  17 April: 13, WeeklyContests_80.task_1
  19 April: 14
  6  May:   HashMap & HashSet
+ 29 May:   Find Fibonacci number
+ 30 May:   Is Fibonacci number
  
  Done by myself:
     1, 7, 2, 9, 13
