Leet Code WeeklyContentsts 90. Task 1 was added

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -10,15 +10,18 @@
  11 April: 7
  12 April: 2
  13 April: 9
- 17 April: 13, WeeklyContests_80.task_1
+ 17 April: 13, WeeklyContentsts 80. Task 1
  19 April: 14
  6  May:   HashMap & HashSet
  29 May:   Find Fibonacci number
  30 May:   Is Fibonacci number
+ 20 June:  Reverse string
+ 26 June:  WeeklyContentsts 90. Task 1
+ 
  
  Done by myself:
     1, 7, 2, 9, 13
  
  Done by myself but need attention:
-    14, WeeklyContests_80.task_1
+    14, WeeklyContests 80. Task 1, WeeklyContentsts 90. Task 1
 */
