[in progress] Print All Subsets problem

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -17,6 +17,9 @@
  30 May:   Is Fibonacci number
  20 June:  Reverse string
  26 June:  WeeklyContentsts 90. Task 1
+ 1  July:  Quick Sort
+ 4  July:  Merge Sort
+ 8  July:  Counting Sort
  
  
  Done by myself:
