Project was renamed from 'LeetCode' to 'CodingChallenges'

--- a/Statistics.strings
+++ b/Statistics.strings
@@ -1,6 +1,6 @@
 /* 
   Statistics.strings
-  LeetCode. Created by Maxim Eremenko on 4/10/18.
+  CodingChallenges. Created by Maxim Eremenko on 4/10/18.
  
  Solved:
  
